# tess-tools

./: .gitignore  BuildDockerfile  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  Tess.py  build-muscleworker.sh  cmTess.py  example_test_00_pointclouds.py  example_test_00_write.py  example_test_01_read_Output.py  example_test_02_appTest.py  example_test_03_appTest_debug.py  example_test_03_write.py  example_test_04_write.py  pyproject.toml  readme.md  setup.py  tess.ipynb  tess_tools.ipynb  test_02_appTest.py  test_03_write.py
CpTemperature/: CMakeLists.txt  CpTemperature.kdev4  Data1d.cpp  Data1d.h  Data3d.cpp  Data3d.h  Siminfo.cpp  Siminfo.h  Temperature.cpp  Temperature.h  main.cpp  readme.md
Thermal Properties/: ParametersWrite.py
Thermal_Properties/: ParametersWrite.py  createParametersFile.py
_skbuild/linux-x86_64-3.12/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake  install_manifest.txt
_skbuild/linux-x86_64-3.12/cmake-build/CpTemperature/: cmake_install.cmake
_skbuild/linux-x86_64-3.12/setuptools/lib.linux-x86_64-cpython-312/tess/: tess.py
tess/: tess.py
tess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tess/testdata/Head/: test.py
tess/testdata/Thermal_Properties/: MaterialProperties.mat  ParametersWrite.py
test/: test.py
testdata/Head/: test.py
testdata/Thermal_Properties/: createParametersFile.py
