[build-system]
requires = [
  "setuptools>=61.0.0",
  "wheel",
  "scikit-build>=0.15.0",     # <— adds the 'skbuild' module
  "cmake>=3.18",
  "ninja"                  # optional, but faster than 'make'
]
build-backend = "setuptools.build_meta"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# remove or extend this filter so your bin/ folder isn’t excluded
include = [
  "**/*.py",
  "tess/bin/*"
]

[project]
name = "tess"
version = "1.0.0.4"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "tess"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["pynico_eros_montin @ git+https://github.com/erosmontin/pynico.git","pyable_eros_montin @ git+https://github.com/erosmontin/pyable.git"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[project.urls]
"Homepage" = "https://github.com/erosmontin/cmrawspy"
"Bug Tracker" = "https://github.com/erosmontin/cmrawspy/issues"
